--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@ config/secrets.yml
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
+
+# Ignore other unneeded files.
+*.swp
+*~
