--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ rerun.txt
 pickle-email-*.html
 config/initializers/secret_token.rb
 config/secrets.yml
+config/database.yml
 
 ## Environment normalisation:
 /.bundle
@@ -24,6 +25,9 @@ config/secrets.yml
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
+.ruby-version
+.ruby-gemset
+config/database.yml
 
 # Ignore other unneeded files.
 *.swp
