--- a/config/database.yml
+++ b/config/database.yml
@@ -5,8 +5,8 @@
 #   gem 'sqlite3'
   login: &login
     adapter: postgresql
-    username: postgres
-    password: postgres
+    username: Lungs
+    password: 
     host: localhost
     port: 5432
     pool: 5
