--- a/lib/stats_client/Gemfile
+++ b/lib/stats_client/Gemfile
@@ -6,6 +6,7 @@ source "http://rubygems.org"
 # Add dependencies to develop your gem here.
 # Include everything needed to run rake, tests, features, etc.
 gem 'httparty'
+gem 'crack'
 group :development do
   gem "rspec", "~> 2.8.0"
   gem "rdoc", "~> 3.12"
