--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ pickle-email-*.html
 config/initializers/secret_token.rb
 config/secrets.yml
 config/database.yml
+config/initializers/setup_mail.rb
 
 ## Environment normalisation:
 /.bundle
