--- a/lib/sportsdata-client/Rakefile
+++ b/lib/sportsdata-client/Rakefile
@@ -17,8 +17,8 @@ Jeweler::Tasks.new do |gem|
   gem.name = "sportsdata-client"
   gem.homepage = "http://github.com/kennethjiang/sportsdata-client"
   gem.license = "MIT"
-  gem.summary = %Q{TODO: one-line summary of your gem}
-  gem.description = %Q{TODO: longer description of your gem}
+  gem.summary = %Q{Client for SportsData APIs}
+  gem.description = %Q{Client for SportsData APIs}
   gem.email = "kenneth.jiang@gmail.com"
   gem.authors = ["Kenneth"]
   # dependencies defined in Gemfile
