remove compiled assets from repo

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ config/secrets.yml
 config/database.yml
 config/initializers/setup_mail.rb
 
+#compiled assets
+/public/assets
+
 ## Environment normalisation:
 /.bundle
 /vendor/bundle
